--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
     <section class="hero">
         <div class="container">
             <img src="https://via.placeholder.com/800x200/004080/FFFFFF?text=Quantum+Digital+Twin+Masterclass" alt="Quantum Digital Twin Masterclass">
-            <h2>Unlock the Future with Quantum Digital Twins</h2>
-            <p>Join us on January 25-27, 2025, at the Tech Innovation Center.</p>
+            <h2>Quantum Simulators and Quantum Digital Twins: The Masterclass</h2>
+            <p>Join us at National Physical Laboratory on March 4-7, 2025, at the Bushy House.</p>
             <a href="#registration">Register Now</a>
         </div>
     </section>
@@ -191,7 +191,7 @@
                 <p>Discover the latest advancements in Quantum Digital Twin technology and its applications across various industries.</p>
             </div>
             <p>
-                The Quantum Digital Twin Masterclass is a three-day intensive program designed for professionals, researchers, and enthusiasts interested in the intersection of quantum computing and digital twin technology. Through a series of lectures, workshops, and hands-on sessions, participants will gain deep insights into creating, managing, and optimizing digital twins using quantum technologies.
+                The Quantum Digital Twin Masterclass is a four-day intensive program designed for professionals, researchers, and enthusiasts interested in the intersection of quantum computing and digital twin technology. Through a series of lectures, workshops, and hands-on sessions, participants will gain deep insights into creating, managing, and optimizing digital twins using quantum technologies.
             </p>
             <img src="https://via.placeholder.com/800x400/cccccc/FFFFFF?text=About+Image" alt="About Image">
         </div>
@@ -286,10 +286,10 @@
                 <h3>Contact Us</h3>
                 <p>If you have any questions, feel free to reach out.</p>
             </div>
-            <p>Email: <a href="mailto:info@quantumdigitaltwin.com">info@quantumdigitaltwin.com</a></p>
-            <p>Phone: +1 (234) 567-8901</p>
+            <p>Email: <a href="mailto:daniel.rodrigo-albert@npl.co.uk">daniel.rodrigo-albert@npl.co.uk</a></p>
             <p>Address: 123 Quantum Lane, Innovation City, Tech State, 45678</p>
             <!-- You can also embed a Google Map here if desired -->
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2488.0545349695!2d-0.3439818117474202!3d51.4204248443359!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760b003575f69f%3A0x4c42601b19b67614!2sBushy%20House!5e0!3m2!1sen!2suk!4v1737114114318!5m2!1sen!2suk" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
 
