--- a/index.html
+++ b/index.html
@@ -286,10 +286,12 @@
                 <h3>Contact Us</h3>
                 <p>If you have any questions, feel free to reach out.</p>
             </div>
+            <div class="section-title">
             <p>Email: <a href="mailto:daniel.rodrigo-albert@npl.co.uk">daniel.rodrigo-albert@npl.co.uk</a></p>
             <p>Address: 123 Quantum Lane, Innovation City, Tech State, 45678</p>
             <!-- You can also embed a Google Map here if desired -->
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2488.0545349695!2d-0.3439818117474202!3d51.4204248443359!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760b003575f69f%3A0x4c42601b19b67614!2sBushy%20House!5e0!3m2!1sen!2suk!4v1737114114318!5m2!1sen!2suk" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </div>
     </section>
 
