--- a/index.html
+++ b/index.html
@@ -205,14 +205,14 @@
                 <p>Learn from industry leaders and experts in quantum computing and digital twin technology.</p>
             </div>
             <div class="speaker">
-                <img src="https://via.placeholder.com/150/004080/FFFFFF?text=Speaker+1" alt="Speaker 1">
+                <img src="speaker-icon.png" alt="Lecturer">
                 <div>
                     <h4>Dr. Alice Johnson</h4>
                     <p>Quantum Computing Specialist at Tech Innovators Inc.</p>
                 </div>
             </div>
             <div class="speaker">
-                <img src="https://via.placeholder.com/150/004080/FFFFFF?text=Speaker+2" alt="Speaker 2">
+                <img src="speaker-icon.png" alt="Lecturer">
                 <div>
                     <h4>Prof. Michael Lee</h4>
                     <p>Professor of Digital Systems at University of Technology.</p>
@@ -230,7 +230,7 @@
                 <p>Plan your participation with our detailed schedule.</p>
             </div>
             <div class="event">
-                <img src="https://via.placeholder.com/100/004080/FFFFFF?text=Day+1" alt="Day 1">
+                <img src="day-icon-1.png" alt="Day 1">
                 <div>
                     <h4>Day 1: Introduction to Quantum Digital Twins</h4>
                     <p>09:00 AM - Opening Remarks</p>
@@ -240,7 +240,7 @@
                 </div>
             </div>
             <div class="event">
-                <img src="https://via.placeholder.com/100/004080/FFFFFF?text=Day+2" alt="Day 2">
+                <img src="day-icon-2.png" alt="Day 2">
                 <div>
                     <h4>Day 2: Building and Managing Digital Twins</h4>
                     <p>09:00 AM - Workshop: Creating Your First Digital Twin</p>
@@ -250,7 +250,17 @@
                 </div>
             </div>
             <div class="event">
-                <img src="https://via.placeholder.com/100/004080/FFFFFF?text=Day+3" alt="Day 3">
+                <img src="day-icon-3.png" alt="Day 3">
+                <div>
+                    <h4>Day 3: Advanced Applications and Future Trends</h4>
+                    <p>09:00 AM - Seminar: Integrating AI with Digital Twins</p>
+                    <p>11:00 AM - Case Studies: Success Stories</p>
+                    <p>01:00 PM - Closing Ceremony</p>
+                    <!-- Add more schedule items -->
+                </div>
+            </div>
+            <div class="event">
+                <img src="day-icon-4.png" alt="Day 4">
                 <div>
                     <h4>Day 3: Advanced Applications and Future Trends</h4>
                     <p>09:00 AM - Seminar: Integrating AI with Digital Twins</p>
@@ -299,7 +309,6 @@
     <!-- Footer -->
     <footer>
         <p>&copy; 2025 Quantum Digital Twin Masterclass. All rights reserved.</p>
-        <p><a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
     </footer>
 
 </body>
