--- a/index.html
+++ b/index.html
@@ -191,9 +191,18 @@
                 <p>Discover the latest advancements in Quantum Digital Twin technology and its applications across various industries.</p>
             </div>
             <p>
-                The Quantum Digital Twin Masterclass is a four-day intensive program designed for professionals, researchers, and enthusiasts interested in the intersection of quantum computing and digital twin technology. Through a series of lectures, workshops, and hands-on sessions, participants will gain deep insights into creating, managing, and optimizing digital twins using quantum technologies.
+                The Quantum Digital Twin Masterclass aims to bring together specialists in quantum simulation, tensor networks, and quantum materials to explore the 
+                future prospects of large-scale quantum simulators and the development of customized tools for emulating these devices at increasing number of qubits.
+                This event will feature two research-intensive days, bringing leading academics and industry reprepresentatives, to showcase recent advancements in 
+                these fields. The presentations will highlight progress in quantum hardware, software, and methodologies for simulating quantum matter — an area where quantum 
+                computers and simulators are expected to offer advantages. The masterclass will also include two days of lectures tailored for graduate students 
+                and postdocs in quantum technologies and condensed matter physics, providing foundational and advanced insights into these cutting-edge topics. 
+                This unique format combines high-level research discussions with an educational component, reducing the barrier for entering the field
+                and faciliating the exchange of ideas for developing new generations of quantum digital twins.
             </p>
-            <img src="https://via.placeholder.com/800x400/cccccc/FFFFFF?text=About+Image" alt="About Image">
+            <p>
+                The tentative programme for the event is to be finalised. Below we list of lecturers for the masterclass and invited speakers.
+            <\p>
         </div>
     </section>
 
