--- a/index.html
+++ b/index.html
@@ -210,21 +210,49 @@
     <section id="speakers" class="speakers">
         <div class="container">
             <div class="section-title">
-                <h3>Our Speakers</h3>
-                <p>Learn from industry leaders and experts in quantum computing and digital twin technology.</p>
+                <h3>Our Lecturers</h3>
+                <p>Learn from leading experts in quantum simulation and tensor network methods.</p>
             </div>
             <div class="speaker">
                 <img src="speaker-icon.png" alt="Lecturer">
                 <div>
-                    <h4>Dr. Alice Johnson</h4>
-                    <p>Quantum Computing Specialist at Tech Innovators Inc.</p>
+                    <h4>Prof. Natalia Chepiga (TU Delft, The Netherlands)</h4>
+                    <p>Introduction to tensor network methods for condensed matter systems</p>
                 </div>
             </div>
             <div class="speaker">
                 <img src="speaker-icon.png" alt="Lecturer">
                 <div>
-                    <h4>Prof. Michael Lee</h4>
-                    <p>Professor of Digital Systems at University of Technology.</p>
+                    <h4>Prof. Zlatko Papic (University of Leeds, UK)</h4>
+                    <p>Tensor networks for simulating dynamical systems</p>
+                </div>
+            </div>
+            <div class="speaker">
+                <img src="speaker-icon.png" alt="Lecturer">
+                <div>
+                    <h4>Prof. Andrew Green (University College London, UK)</h4>
+                    <p>Quantum computing and circuit simulation methods inspired by tensor networks</p>
+                </div>
+            </div>
+            <div class="speaker">
+                <img src="speaker-icon.png" alt="Lecturer">
+                <div>
+                    <h4>Dr. Lachlan Lindoy (National Physical Laboratory, UK)</h4>
+                    <p>Hands-on for tree tensor networks: introducing PyTTN for simulating open quantum qystems</p>
+                </div>
+            </div>
+            <div class="speaker">
+                <img src="speaker-icon.png" alt="Lecturer">
+                <div>
+                    <h4>[TBD] Prof. Mari Carmen Banuls (TU Munich, Germany)</h4>
+                    <p>To be confirmed.</p>
+                </div>
+            </div>
+            <div class="speaker">
+                <img src="speaker-icon.png" alt="Lecturer">
+                <div>
+                    <h4>[TBC] Prof. Simone Montangero (University of Padova, Italy)</h4>
+                    <p>To be confirmed.</p>
                 </div>
             </div>
             <!-- Add more speakers as needed -->
