--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <div class="container">
             <img src="qdt-masterclass-v2.png" alt="Quantum Digital Twin Masterclass">
             <h2>Quantum Simulators and Quantum Digital Twins: The Masterclass</h2>
-            <p>Join us at National Physical Laboratory on March 4-7, 2025, at the Bushy House.</p>
+            <p>Join us at the National Physical Laboratory on <b></b>March 4-7, 2025</b>, at the Bushy House.</p>
             <a href="#registration">Register Now</a>
         </div>
     </section>
@@ -258,10 +258,94 @@
                     <p>To be confirmed.</p>
                 </div>
             </div>
-            <!-- Add more speakers as needed -->
         </div>
     </section>
-
+    
+<!-- Speakers Section -->
+    <section id="speakers" class="speakers">
+        <div class="container">
+            <div class="section-title">
+                <h3>Invited Speakers:</h3>
+                <p>Listen to the latest advances in the field.</p>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>Prof. Frank Verstraete(Univ. Cambridge, UK)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>Prof. Sougato Bose (UCL, UK)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>Dr. Fedor Simkovic (IQM, Germany)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>Dr. Nathan Fitzpatrick (Quantinuum, UK)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>Prof. Viv Kendon (Univ. Strathclyde, UK)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>Dr. Constantin Dalyac (Pasqal, France)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>Dr. Yaroslav Herasymenko (TU Delft, The Netherlands)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>Prof. George Booth (King's College London, UK)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>Prof. Andrew Daley (Univ. Oxford, UK; to be confirmed)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>Dr. Ivano Tavernelli (IBM Zurich, Switzerland; to be confirmed)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>Dr. Stasja Stanisic (Phasecraft, UK; to be confirmed)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>Dr. Ryan Hanley (ColdQuanta, UK; to be confirmed)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>Dr. Annabelle Bohrdt (Univ. Regensburg, Germany; to be confirmed)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>Dr. Stefano Mensa (Hartree Centre, UK; to be confirmed)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>Dr. Lucile Savary (Ecole Normale, Lyon, France; to be confirmed)</h4>
+                </div>
+            </div>
+        </div>
+    </section>
+    
     <!-- Schedule Section -->
     <section id="schedule" class="schedule">
         <div class="container">
@@ -324,6 +408,7 @@
                 <input type="email" name="email" placeholder="Email Address" required>
                 <input type="text" name="organization" placeholder="Organization">
                 <textarea name="message" rows="4" placeholder="Any special requirements"></textarea>
+                <textarea name="message" rows="6" placeholder="Please describe your background and motivation for joining the masterclass."></textarea>
                 <button type="submit">Submit Registration</button>
             </form>
         </div>
