--- a/index.html
+++ b/index.html
@@ -278,88 +278,31 @@
     
 <!-- Speakers Section -->
     <section id="speakers" class="speakers">
-        <div class="container">
-            <div class="section-title">
-                <h3>Invited Speakers:</h3>
-                <p>Listen to the latest advances in the field.</p>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Prof. Frank Verstraete(Univ. Cambridge, UK)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Prof. Sougato Bose (UCL, UK)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Dr. Fedor Simkovic (IQM, Germany)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Dr. Nathan Fitzpatrick (Quantinuum, UK)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Prof. Viv Kendon (Univ. Strathclyde, UK)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Dr. Constantin Dalyac (Pasqal, France)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Dr. Yaroslav Herasymenko (TU Delft, The Netherlands)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Prof. George Booth (King's College London, UK)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Prof. Andrew Daley (Univ. Oxford, UK; to be confirmed)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Dr. Ivano Tavernelli (IBM Zurich, Switzerland; to be confirmed)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Dr. Stasja Stanisic (Phasecraft, UK; to be confirmed)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Dr. Ryan Hanley (ColdQuanta, UK; to be confirmed)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Dr. Annabelle Bohrdt (Univ. Regensburg, Germany; to be confirmed)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Dr. Stefano Mensa (Hartree Centre, UK; to be confirmed)</h4>
-                </div>
-            </div>
-            <div class="speaker">
-                <div>
-                    <h4>&#8226; Dr. Lucile Savary (Ecole Normale, Lyon, France; to be confirmed)</h4>
-                </div>
-            </div>
+    <div class="container">
+        <div class="section-title">
+            <h3>Invited Speakers:</h3>
+            <p>Listen to the latest advances in the field.</p>
         </div>
-    </section>
+        <ul style="list-style-type: disc; text-align: center; padding: 0; margin: 0;">
+            <li>Prof. Frank Verstraete (Univ. Cambridge, UK)</li>
+            <li>Prof. Sougato Bose (UCL, UK)</li>
+            <li>Dr. Fedor Simkovic (IQM, Germany)</li>
+            <li>Dr. Nathan Fitzpatrick (Quantinuum, UK)</li>
+            <li>Prof. Viv Kendon (Univ. Strathclyde, UK)</li>
+            <li>Dr. Constantin Dalyac (Pasqal, France)</li>
+            <li>Dr. Yaroslav Herasymenko (TU Delft, The Netherlands)</li>
+            <li>Prof. George Booth (King's College London, UK)</li>
+            <li>Prof. Andrew Daley (Univ. Oxford, UK; to be confirmed)</li>
+            <li>Dr. Ivano Tavernelli (IBM Zurich, Switzerland; to be confirmed)</li>
+            <li>Dr. Stasja Stanisic (Phasecraft, UK; to be confirmed)</li>
+            <li>Dr. Ryan Hanley (ColdQuanta, UK; to be confirmed)</li>
+            <li>Dr. Annabelle Bohrdt (Univ. Regensburg, Germany; to be confirmed)</li>
+            <li>Dr. Stefano Mensa (Hartree Centre, UK; to be confirmed)</li>
+            <li>Dr. Lucile Savary (Ecole Normale, Lyon, France; to be confirmed)</li>
+        </ul>
+    </div>
+</section>
+
     
     <!-- Schedule Section -->
     <section id="schedule" class="schedule">
@@ -413,21 +356,22 @@
 
     <!-- Registration Section -->
     <section id="registration" class="registration" style="background-color: #f9f9f9;">
-        <div class="container">
-            <div class="section-title">
-                <h3>Register Now</h3>
-                <p>Secure your spot at the Quantum Digital Twin Masterclass.</p>
-            </div>
-            <form action="#" method="post">
-                <input type="text" name="fullname" placeholder="Full Name" required>
-                <input type="email" name="email" placeholder="Email Address" required>
-                <input type="text" name="organization" placeholder="Organization">
-                <textarea name="message" rows="4" placeholder="Any special requirements"></textarea>
-                <textarea name="message" rows="6" placeholder="Please describe your background and motivation for joining the masterclass."></textarea>
-                <button type="submit">Submit Registration</button>
-            </form>
+    <div class="container">
+        <div class="section-title">
+            <h3>Register Now</h3>
+            <p>Secure your spot at the Quantum Digital Twin Masterclass.</p>
         </div>
+        <form action="mailto:daniel.rodrigo-albert@npl.co.uk" method="post" enctype="text/plain">
+            <input type="text" name="fullname" placeholder="Full Name" required>
+            <input type="email" name="email" placeholder="Email Address" required>
+            <input type="text" name="organization" placeholder="Organization">
+            <textarea name="message" rows="4" placeholder="Any special requirements"></textarea>
+            <textarea name="motivation" rows="6" placeholder="Describe your background and motivation for joining the masterclass."></textarea>
+            <button type="submit">Submit Registration</button>
+        </form>
+    </div>
     </section>
+
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
